--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,8 @@ unbind C-b
 #splitting panes using 'v' and 'h'
 unbind '"'
 unbind %
-bind-key | split-window -h
-bind-key - split-window -v
+bind-key | split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
 
 # the keybinding for resizing
 bind-key J resize-pane -D 5
