Added new configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-*
-!.gitignore
-!.zshrc
-!.gitconfig
-!.tmux.conf
-!.vim/
-!README.md
-!.config/i3
-!.config/polybar
-!.config/alacrity
+Desktop/
+fonts/
+Music/
+powerlevel10k/
+Templates/
+Documents/
+FormerData/
+nerd-fonts/
+Public/
+tex/
+Downloads/
+linux-conf/
+Pictures/
+Videos/
