--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,23 +1,29 @@
-bind_to_address '127.0.0.1'
-auto_update 'yes'
-restore_paused 'yes'
-max_output_buffer_size '10000'
-db_file '~/.config/mpd/mpd.db'
-log_file '~/.config/mpd/mpd.log'
-pid_file '~/.config/mpd/mpd.pid'
-state_file '~/.config/mpd/mpdstate'
+# vim: filetype=conf
 
-music_directory	'/media/mike0609king/DATA/Music'
-playlist_directory	'/media/mike0609king/DATA/mpdPlaylists'
+user "mike0609king"
+bind_to_address "127.0.0.1"
+
+music_directory	"/media/mike0609king/DATA/Music"
+playlist_directory "/home/mike0609king/.config/mpd/playlists"
+db_file "/home/mike0609king/.config/mpd/database"
+
+auto_update "yes"
+restore_paused "yes"
+
+max_output_buffer_size "10000"
+db_file "~/.config/mpd/mpd.db"
+log_file "~/.config/mpd/mpd.log"
+pid_file "~/.config/mpd/mpd.pid"
+state_file "~/.config/mpd/mpdstate"
 
 audio_output {
-  type 'pulse'
-  name 'pulse'
+  type "pulse"
+  name "pulse"
 }
 
 audio_output {
-  type	'fifo'
-  name	'Visualizer feed'
-  path	'/tmp/mpd.fifo'
-  format	'44100:16:2'
+  type	"fifo"
+  name	"Visualizer feed"
+  path	"/tmp/mpd.fifo"
+  format	"44100:16:2"
 }
