LaTeX settup changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+*.swp
+*.db
+*.log
+*.pid
+
 Desktop/
 fonts/
 Music/
@@ -12,3 +17,69 @@ Downloads/
 linux-conf/
 Pictures/
 Videos/
+.ssh
+.viminfo
+.wget-hsts
+.xsession-*
+.zcompdump*
+.zsh_functions/
+.zsh_history
+.zshenv
+.zshrc.pre-oh-my-zsh
+.face
+.fehbg
+.cargo/
+.dmrc
+.face.icon
+.gnupg
+.lesshst
+.msf4
+.p10k.zsh
+.pki
+.python_history
+.rustup
+.ICEauthority
+.NERDTreeBookmarks
+.Xauthority
+.bash_logout
+.bashrc
+.bashrc.original
+.cache/
+.oh-my-zsh/
+.mozilla/
+
+.vim/autoload/
+.vim/plugged/
+
+.config/BAZECOR/
+.config/Mousepad
+.config/Thunar/
+.config/chromium/
+.config/coc/
+.config/dconf/
+.config/discord/
+.config/exolution/
+.config/fontconfig/
+.config/gtk-3.0/
+.config/ibus/
+.config/kactivitymanagerdrc
+.config/kazam/
+.config/kdeconnect/
+.config/libreoffice/
+.config/evolution/
+.config/kglobalshortcutsrc
+.config/mimeapps.list
+.config/htop/
+.config/okularpartrc
+.config/okularrc
+.config/user-dirs.dirs
+.config/user-dirs.locale
+.config/pulse/
+.config/qt5ct
+.config/qterminal.org/
+.config/ristretto/
+.config/wireshark
+.config/xfce4
+
+.config/mpd/mpdstate
+
