--- a/.config/i3/config
+++ b/.config/i3/config
@@ -321,8 +321,13 @@ bindsym $mod+m mode $mode4
 ####                     Start at beginning                     ####
 ####################################################################
 # Starting when i3 starts
+exec setxkbmap -option caps:escape
+exec mpd
 
 # Starting when i3 Resets
 exec_always feh --bg-scale $bg
+# two screens
 exec_always xrandr --output eDP-1 --primary --mode 1920x1080 --pos 1920x0 --rotate normal --output HDMI-1 --mode 1920x1080 --pos 0x0 --rotate normal --output DP-1 --off --output HDMI-2 --off
+# one screen
+#exec_always xrandr --output eDP-1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-1 --off --output DP-1 --off --output HDMI-2 --off
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
