--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -466,8 +466,7 @@ map g/ cd /
 map g? cd /usr/share/doc/ranger
 
 # my own shortcuts
-map gd cd /media/mike0609king/DATA
-map gm cd /media/mike0609king
+map ge cd /media/sf_e
 
 # External Programs
 map E  edit
