New System change

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -267,11 +267,11 @@ mode $mode3 {
   # start chromium
   bindsym c exec chromium
   # start bazecor
-  #bindsym b exec /media/mike0609king/DATA/Apps/Bazecor/Bazecor
+  bindsym b exec /media/mike0609king/DATA/Apps/Bazecor/Bazecor
   # start file manager GUI
   bindsym $mod+e exec thunar
   # start Settings
-  #bindsym $mod+i exec gnome-control-center
+  bindsym $mod+i exec gnome-control-center
   
   # Transition to other modes
 	bindsym Escape mode "default"
