--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -3,7 +3,7 @@
 user "mike0609king"
 bind_to_address "127.0.0.1"
 
-music_directory	"/media/mike0609king/DATA/Music"
+music_directory	"/media/sf_e/Music"
 playlist_directory "/home/mike0609king/.config/mpd/playlists"
 db_file "/home/mike0609king/.config/mpd/database"
 
