--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -1,12 +1,13 @@
 #vim: filetype=conf
 
 # Host 
-#mpd_host = "127.0.0.1"
+mpd_host = "127.0.0.1"
+mpd_port = "6600"
 
 # Directories
 ncmpcpp_directory = "~/.config/ncmpcpp"
 lyrics_directory = "~/.config/ncmpcpp"
-mpd_music_dir = "/media/mike0609king/DATA/Music"
+mpd_music_dir = "/media/sf_e/Music"
 
 # Visualizer 
 visualizer_fifo_path = "/tmp/mpd.fifo"
