--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,6 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-
 ####################################################################
 ####                  Definitions of variables                  ####
 ####################################################################
@@ -19,7 +18,7 @@ set $mod Mod4
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
-set $ws4 "4"
+set $ws4 "4:Hi"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
@@ -35,7 +34,7 @@ set $outer_gaps 0
 set $term --no-startup-id alacritty
 
 # background 
-set $bg "/home/mike0609king/Pictures/Wallpapers/1.jpg"
+set $bg "/home/mike0609king/Pictures/Wallpapers/Little Anime Girl (1).png"
 
 ####################################################################
 ####                  Some "Basic" Initialisations              ####
@@ -117,16 +116,17 @@ bindsym $mod+n layout toggle split
 bindsym $mod+l exec i3lock
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+# With numbers: bindsym $mod+0 workspace number $ws1
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # force window class to open in certain workspace
 assign[class="discord"] $ws10
@@ -147,28 +147,30 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 set $mode1 "window"
 mode $mode1{
   # switch to workspace
-  bindsym 1 workspace number $ws1
-  bindsym 2 workspace number $ws2
-  bindsym 3 workspace number $ws3
-  bindsym 4 workspace number $ws4
-  bindsym 5 workspace number $ws5
-  bindsym 6 workspace number $ws6
-  bindsym 7 workspace number $ws7
-  bindsym 8 workspace number $ws8
-  bindsym 9 workspace number $ws9
-  bindsym 0 workspace number $ws10
+  # With numbers: bindsym 1 workspace number $ws1
+  bindsym 1 workspace $ws1
+  bindsym 2 workspace $ws2
+  bindsym 3 workspace $ws3
+  bindsym 4 workspace $ws4
+  bindsym 5 workspace $ws5
+  bindsym 6 workspace $ws6
+  bindsym 7 workspace $ws7
+  bindsym 8 workspace $ws8
+  bindsym 9 workspace $ws9
+  bindsym 0 workspace $ws10
 
   # move focused container to workspace
-  bindsym Shift+1 move container to workspace number $ws1
-  bindsym Shift+2 move container to workspace number $ws2
-  bindsym Shift+3 move container to workspace number $ws3
-  bindsym Shift+4 move container to workspace number $ws4
-  bindsym Shift+5 move container to workspace number $ws5
-  bindsym Shift+6 move container to workspace number $ws6
-  bindsym Shift+7 move container to workspace number $ws7
-  bindsym Shift+8 move container to workspace number $ws8
-  bindsym Shift+9 move container to workspace number $ws9
-  bindsym Shift+0 move container to workspace number $ws10
+  # With numbers: bindsym Shift+0 move container to workspace number $ws1
+  bindsym Shift+1 move container to workspace $ws1
+  bindsym Shift+2 move container to workspace $ws2
+  bindsym Shift+3 move container to workspace $ws3
+  bindsym Shift+4 move container to workspace $ws4
+  bindsym Shift+5 move container to workspace $ws5
+  bindsym Shift+6 move container to workspace $ws6
+  bindsym Shift+7 move container to workspace $ws7
+  bindsym Shift+8 move container to workspace $ws8
+  bindsym Shift+9 move container to workspace $ws9
+  bindsym Shift+0 move container to workspace $ws10
 
   # move workspace between monitors
   bindsym Control+l move workspace to output right
