--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -11,6 +11,7 @@ auto_update "yes"
 restore_paused "yes"
 
 max_output_buffer_size "10000"
+#buffer_time "100000"
 db_file "~/.config/mpd/mpd.db"
 log_file "~/.config/mpd/mpd.log"
 pid_file "~/.config/mpd/mpd.pid"
@@ -21,9 +22,15 @@ audio_output {
   name "pulse"
 }
 
+#audio_output {
+#        type                    "alsa"
+#        name                    "Sound Card"
+#        options                 "dev=dmixer"
+#}
+
 audio_output {
   type	"fifo"
   name	"Visualizer feed"
   path	"/tmp/mpd.fifo"
-  format	"44100:16:2"
+  format	"44100:16:1"
 }
