--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -10,10 +10,10 @@ lyrics_directory = "~/.config/ncmpcpp"
 mpd_music_dir = "/media/sf_e/Music"
 
 # Visualizer 
-visualizer_fifo_path = "/tmp/mpd.fifo"
-#visualizer_data_source = "tmp/mpd.fifo"
+#visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_data_source = "tmp/mpd.fifo"
 visualizer_output_name = "my_fifo"
-visualizer_sync_interval = "60"
+# visualizer_sync_interval = "60"
 visualizer_in_stereo = "yes"
 visualizer_type = "spectrum"
 visualizer_look = "◆▋"
