--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,9 +16,10 @@ set-option -g prefix C-W
 bind-key C-W send-prefix
 unbind C-b
 
-#splitting panes using 'v' and 'h'
+#splitting panes using '|' and '-'
 unbind '"'
 unbind %
+unbind t
 bind-key | split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 
@@ -27,6 +28,9 @@ bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
+
+bind-key y resize-pane -y 2
+bind-key t resize-pane -y 60
 
 # Selecting panes
 bind h select-pane -L
